Fix for images on IE 11

--- a/app/assets/styles/_landing.scss
+++ b/app/assets/styles/_landing.scss
@@ -93,6 +93,7 @@
   }
   img{
     vertical-align:bottom;
+    width: 100%;
   }
 }
 
@@ -696,5 +697,12 @@ hr{
   position: absolute;
   right: 8px;
   top: 10px;
+  }
+}
+
+.OSM-logo{
+  img{
+  width: 100px;
+  height: 100px;
   }
 }
